Fix background cut off

--- a/public/common.css
+++ b/public/common.css
@@ -2,6 +2,10 @@
  * Globals
  */
 
+html {
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+}
+
 /* Custom default button */
 .btn-secondary,
 .btn-secondary:hover,
@@ -16,7 +20,6 @@
 
 body {
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
 .cover-container {
